--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,22 @@
 * {
 	background-color: rgb(3, 3, 63);
 	background-color: rgb(7, 7, 107);
+	color: #ffffff;
+}
+
+.flex {
+	display: flex;
 }
 
 .chart-container {
 	position: relative;
 	height: 40rem;
 	width: 40rem;
+}
+
+img {
+	width: 3rem;
+	height: 3rem;
 }
 
 .loader {
@@ -46,6 +56,11 @@
 		background-position: 0 50%, 0 -2px, 0 calc(100% + 2px), 50% 50%, 50% -2px,
 			50% calc(100% + 2px), 100% 50%, 100% -2px, 100% calc(100% + 2px);
 	}
+}
+
+.chart-duration ul li {
+	cursor: pointer;
+	margin: 0.5rem;
 }
 
 @media (max-width: 1000px) {
