--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,7 @@
 @import "https://code.highcharts.com/css/annotations/popup.css";
 
 * {
-  background-color: rgb(3, 3, 63);
-  background-color: rgb(255, 255, 255);
+  background-color: #2f2c49;
   color: #333;
 }
 
