--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 @import "https://code.highcharts.com/css/annotations/popup.css";
 
 * {
-  background-color: #2f2c49;
+  background-color: #0a0a0a;
   color: #333;
 }
 
