--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,18 @@ h1 {
 
 .chart-container {
   position: relative;
-  height: 100%;
-  width: 75%;
+  /* width: 70%; */
+  /* height: auto; */
   padding-bottom: 2rem;
+  min-width: 360px;
+  max-width: 800px;
+  margin: 1em auto;
+}
+
+.chart-container canvas {
+  background-color: #1c1b2b;
+  border-radius: 1rem;
+  padding: 0.7rem;
 }
 
 img {
@@ -79,9 +88,8 @@ img {
   margin: 0.5rem;
 }
 
-@media (max-width: 1000px) {
-  .chart-container {
-    height: 100%;
-    width: 90%;
+@media (max-width: 500px) {
+  .lines .chart-container {
+    display: none;
   }
 }
