--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h1 {
 .chart-container {
   position: relative;
   /* width: 70%; */
-  /* height: auto; */
+  height: 60vh;
   padding-bottom: 2rem;
   min-width: 360px;
   max-width: 800px;
@@ -89,6 +89,27 @@ img {
 }
 
 @media (max-width: 500px) {
+  .container {
+    padding: 0;
+  }
+
+  .bars .chart-container,
+  .scatter .chart-container {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    padding-bottom: 2rem;
+    min-width: 360px;
+    max-width: 800px;
+    margin: 1em auto;
+  }
+
+  .highcharts-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .lines .chart-container {
     display: none;
   }
