--- a/src/App.css
+++ b/src/App.css
@@ -19,100 +19,16 @@ h1 {
   font-family: "Syne Mono", monospace;
 }
 
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 .flex {
   display: flex;
-}
-
-.chart-container {
-  position: relative;
-  /* width: 70%; */
-  height: 60vh;
-  padding-bottom: 2rem;
-  min-width: 360px;
-  max-width: 800px;
-  margin: 1em auto;
-}
-
-.chart-container canvas {
-  background-color: #1c1b2b;
-  border-radius: 1rem;
-  padding: 0.7rem;
-}
-
-img {
-  width: 3rem;
-  height: 3rem;
-}
-
-.loader {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.loading-1 {
-  width: 60px;
-  height: 60px;
-  color: var(--primary-color);
-  margin: auto;
-  margin-bottom: 2rem;
-  --c: linear-gradient(currentColor 0 0);
-  --r1: radial-gradient(farthest-side at bottom, currentColor 93%, #0000);
-  --r2: radial-gradient(farthest-side at top, currentColor 93%, #0000);
-  background: var(--c), var(--r1), var(--r2), var(--c), var(--r1), var(--r2),
-    var(--c), var(--r1), var(--r2);
-  background-repeat: no-repeat;
-  animation: db1 1s infinite alternate;
-}
-
-@keyframes db1 {
-  0%,
-  10% {
-    background-size: 8px 0, 8px 4px, 8px 4px;
-    background-position: 0 50%, 0 calc(50% - 2px), 0 calc(50% + 2px), 50% 50%,
-      50% calc(50% - 2px), 50% calc(50% + 2px), 100% 50%, 100% calc(50% - 2px),
-      100% calc(50% + 2px);
-  }
-  90%,
-  100% {
-    background-size: 8px 100%, 8px 4px, 8px 4px;
-    background-position: 0 50%, 0 -2px, 0 calc(100% + 2px), 50% 50%, 50% -2px,
-      50% calc(100% + 2px), 100% 50%, 100% -2px, 100% calc(100% + 2px);
-  }
-}
-
-.chart-duration ul li {
-  cursor: pointer;
-  margin: 0.5rem;
-}
-
-@media (max-width: 500px) {
-  .container {
-    padding: 0;
-  }
-
-  .bars .chart-container,
-  .scatter .chart-container {
-    position: relative;
-    width: 100%;
-    height: 80vh;
-    padding-bottom: 2rem;
-    min-width: 360px;
-    max-width: 800px;
-    margin: 1em auto;
-  }
-
-  .highcharts-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .lines .chart-container {
-    display: none;
-  }
 }
 
 .load-container {
@@ -145,7 +61,72 @@ img {
   height: 0%;
 }
 
-.Headd {
+.headd {
   opacity: 0;
+  height: 100vh;
   pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home .headd ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.home {
+  overflow: hidden;
+}
+
+.home li {
+  border: 1px solid red;
+}
+
+.chart-container {
+  position: relative;
+  height: 60vh;
+  padding-bottom: 2rem;
+  min-width: 360px;
+  max-width: 800px;
+  margin: 1em auto;
+}
+
+.chart-container canvas {
+  background-color: #1c1b2b;
+  border-radius: 1rem;
+  padding: 0.7rem;
+}
+
+.chart-duration ul li {
+  cursor: pointer;
+  margin: 0.5rem;
+}
+
+@media (max-width: 500px) {
+  .container {
+    padding: 0;
+  }
+
+  .bars .chart-container,
+  .scatter .chart-container {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    padding-bottom: 2rem;
+    min-width: 360px;
+    max-width: 800px;
+    margin: 1em auto;
+  }
+
+  .highcharts-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .lines .chart-container {
+    display: none;
+  }
 }
