--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,6 @@ h1 {
   font-family: "Syne Mono", monospace;
 }
 
-li {
-  list-style-type: none;
-}
-
 a {
   text-decoration: none;
 }
@@ -66,22 +62,46 @@ a {
   height: 100vh;
   pointer-events: none;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-.home .headd ul {
+.home .headd > :first-child {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+  gap: 2rem;
+  padding: 0;
 }
 
 .home {
+  font-family: "Syne Mono", monospace;
   overflow: hidden;
 }
 
-.home li {
-  border: 1px solid red;
+.home .headd > :first-child a {
+  list-style-type: none;
+  font-size: 1.2rem;
+  transition: 0.5s;
+  text-align: center;
+  padding: 1rem 2rem;
+  border: 1px solid #1a508b;
+  cursor: pointer;
+}
+
+.home .headd > :first-child a,
+.home .headd > :first-child svg {
+  background-color: transparent;
+  vertical-align: middle;
+}
+
+.bow-arrow {
+  width: 3.1rem;
+  height: 1.7rem;
+}
+
+.home .headd > :first-child a:hover {
+  box-shadow: inset 25rem 0 0 0 rgba(26, 80, 139, 0.4);
 }
 
 .chart-container {
@@ -104,9 +124,59 @@ a {
   margin: 0.5rem;
 }
 
+.loader {
+  display: flex;
+  height: 80vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader > div {
+  width: 70px;
+  height: 70px;
+  display: grid;
+  border: 4px solid #0000;
+  border-radius: 50%;
+  border-color: #1a508b #0000;
+  animation: s6 1s infinite linear;
+}
+
+.loader > div::before,
+.loader > div::after {
+  content: "";
+  grid-area: 1/1;
+  margin: 2px;
+  border: inherit;
+  border-radius: 50%;
+}
+.loader > div::before {
+  border-color: #1c1b2b #0000;
+  animation: inherit;
+  animation-duration: 0.5s;
+  animation-direction: reverse;
+}
+.loader > div::after {
+  margin: 8px;
+}
+
+@keyframes s6 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+
 @media (max-width: 500px) {
   .container {
     padding: 0;
+  }
+
+  .home .headd > :first-child {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .home .headd ul li {
+    margin-bottom: 1rem;
   }
 
   .bars .chart-container,
