--- a/src/App.css
+++ b/src/App.css
@@ -27,47 +27,15 @@ a {
   display: flex;
 }
 
-.load-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+.home {
   height: 100vh;
-  overflow: hidden;
-  pointer-events: none;
-}
-
-.load-screen {
-  position: relative;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  background-color: #19bc8b;
-  width: 0%;
-  height: 100%;
-}
-
-.load-screen1 {
-  position: relative;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  background-color: #1c1b2b;
-  width: 100%;
-  height: 0%;
-}
-
-.headd {
-  opacity: 0;
-  height: 100vh;
-  pointer-events: none;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.home .headd > :first-child {
+.home > :first-child {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
@@ -79,7 +47,7 @@ a {
   overflow: hidden;
 }
 
-.home .headd > :first-child a {
+.home > :first-child a {
   list-style-type: none;
   font-size: 1.2rem;
   transition: 0.5s;
@@ -89,8 +57,8 @@ a {
   cursor: pointer;
 }
 
-.home .headd > :first-child a,
-.home .headd > :first-child svg {
+.home > :first-child a,
+.home > :first-child svg {
   background-color: transparent;
   vertical-align: middle;
 }
@@ -100,12 +68,12 @@ a {
   height: 1.7rem;
 }
 
-.home .headd > :first-child a:hover {
+.home > :first-child a:hover {
   box-shadow: inset 25rem 0 0 0 rgba(26, 80, 139, 0.4);
 }
 
-.home .headd > :first-child a:hover svg {
-  animation: scaling 2s ease-in-out infinite;
+.home > :first-child a:hover svg {
+  animation: scaling 1s ease-in-out infinite;
   animation-direction: alternate;
 }
 
@@ -184,12 +152,12 @@ a {
     padding: 0;
   }
 
-  .home .headd > :first-child {
+  .home > :first-child {
     grid-template-columns: 1fr;
     gap: 1rem;
   }
 
-  .home .headd ul li {
+  .home ul li {
     margin-bottom: 1rem;
   }
 
